image stretch fix 2.0

--- a/test2.css
+++ b/test2.css
@@ -66,12 +66,7 @@ li.head a:hover {
 .nepimg{
     max-width: 100%;
     max-height: 100%;
-<<<<<<< HEAD
     align-self: center;
-=======
-    height: auto;
-    width: auto;
->>>>>>> c722a0e527d20dbd7286addd5f128022e99f4fb3
 }
 
 
